# paired_trading

./: .gitignore  LICENSE  LongShortStrategy.html  LongStrategy(size=1000).html  LongStrategy.html  README.md  SimpleSignalStrategy.html  TrailingStrategy.html  UserStory.md  best_results_optimization.json  datafeatures.py  ds.py  ds2.py  main.py  optimizator.py  paired-base.yml  pyproject.toml  requirements.txt  testing_datamodel.ipynb  train_nn.py  train_predict_back.py  train_predict_back_2.py  trend_powers.ipynb
algorithmic_strategy/: Описание.txt
analyze/: __init__.py  dataload.py
backtester/: core.py
backtester/indicators/: indicators.py
backtester/strategies/: __init__.py  base.py  old_fashion.py  skil_strategy.py  (+2 more)
datamodeling/: __init__.py  datafeatures.py  dscreator.py  pairedmodel.py
maketarget/: __init__.py  mother.py
marker/: __init__.py  feauturizer.py  marker.py  powertrend.py
networks/: __init__.py  binary_class_model_2.py  five_class_power_model_5.py  nn.py  regression_model_1.py  trainnn.py
oldangrybirdtools/: __init__.py  markupdata.py  models.py  target_markup.py  tools.py
optimizer/: __init__.py  optima.py
outputs/: regression_resnet1d_close1_close2.h5
portfolio_optimization/: constants.py  data_preparing.py  functions_for_po.py  po_forward.py
power/: power_nn_test.py  power_trends_binary_class_model_4.py
power_mdata/: powerm.py
powerrun/: __init__.py  customlosses.py  experimental.py  functions.py  functions2.py  models.py  power_run.py  preparedata.py  unets.py
strategies/: __init__.py  superdooper.py  test_strategy.py
(+21 files in other folders)
