[tool.poetry]
name = "paired_trading"
version = "0.1.0"
description = ""
authors = ["Sergey Chekhovskikh <chekh@doconsult.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
