[tool.poetry]
name = "paired_trading"
version = "0.1.0"
description = ""
authors = ["Ai_Trading_Team"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
tabulate = "^0.8.9"
backtrader = "^1.9.76"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
sklearn = "^0.0"
tensorflow = "^2.7.0"
backtrader-plotting = "^2.0.0"
seaborn = "^0.11.2"
pyfolio = "^0.9.2"
Backtesting = "^0.3.2"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
